@@ -1,3 +1,8 @@
+The global test() function is no longer supported, use the run_tests()
+method of the Anita object instead.
+
+When halting the VM, do not attempt to log in if already logged in.
+
 Make the distinctive shell prompts different from one invocation of
 anita to another, so that anita can run itself recursively on the VM
 without the outer instance mistaking a shell prompt from an inner
